:construction: :: card wrap
카드 래퍼

--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -6,6 +6,12 @@
   column-gap: 35px;
 }
 
+.CardWrap {
+  width: 713px;
+  display: inline-flex;
+  flex-direction: column;
+}
+
 .CardWrapper {
   display: inline-flex;
   flex-direction: column;
