--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -4,12 +4,16 @@
   grid-template-columns: 1fr 1fr;
   row-gap: 30px;
   column-gap: 35px;
+  margin-bottom: 100px;
 }
 
 .CardWrap {
+  position: absolute;
+  right: 183px;
   width: 713px;
   display: inline-flex;
   flex-direction: column;
+  margin-top: 20px;
 }
 
 .CardWrapper {
