--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -34,6 +34,14 @@
       display: flex;
       width: 100%;
       justify-content: right;
+      text-align: center;
+      align-items: start;
+      &-Count {
+        font-size: 15px;
+        color: #9b9b9b;
+        font-weight: bold;
+        padding-right: 2px;
+      }
       & > svg {
         cursor: pointer;
       }
