--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -23,7 +23,7 @@
     width: 100%;
     min-height: 140px;
     font-size: 18px;
-    font-weight: normal;
+    font-weight: bold;
     justify-content: center;
     align-items: center;
     text-align: center;
