--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -41,6 +41,11 @@
         color: #9b9b9b;
         font-weight: bold;
         padding-right: 2px;
+        -ms-user-select: none;
+        -moz-user-select: -moz-none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;
+        user-select: none;
       }
       & > svg {
         cursor: pointer;
